<resources>
    <string name="app_name">VMHealthMonitor</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">VM Health Monitor</string>
    <string name="login_script">Please login using credentials</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="button_text">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_enlist_host">EnlistHostActivity</string>
    <string name="title_activity_enlist_vms">EnlistVMSActivity</string>
    <string name="title_activity_health_monitor">HealthMonitorActivity</string>
    <string name="title_activity_view_host">ViewHostActivity</string>
    <string name="title_activity_vminfo">VMInfoActivity</string>
</resources>
