<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#00aff0"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LauncherActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="#ffffff"
        android:layout_marginTop="77dp"
        android:textAllCaps="true"
        android:elegantTextHeight="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:theme="@android:style/Animation.Activity"
        android:layout_alignParentTop="true"
        android:id="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/login_script"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_marginTop="41sp"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:id="@+id/textView3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_marginTop="90sp"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:id="@+id/textView4" />
    <EditText
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:textColor="#ffffff"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignEnd="@+id/textView2"
        android:id="@+id/et_username" />
    <EditText
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:password="true"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignStart="@+id/et_username"
        android:id="@+id/et_password"/>
    <Button
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:textColor="#ffffff"
        android:background="#3B444B"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_login"/>
</RelativeLayout>
